Github building config

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,3 +1,45 @@
-- name: Create Config File
-  run: |
-    echo '{"SB_URL": "${{ secrets.SB_URL }}", "SB_KEY": "${{ secrets.SB_KEY }}"}' > assets/config.json
+name: Build Android
+
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
+
+      - name: Create Config File
+        run: |
+          mkdir -p assets
+          echo '{"SB_URL": "${{ secrets.SB_URL }}", "SB_KEY": "${{ secrets.SB_KEY }}"}' > assets/config.json
+
+      - name: Install dependencies
+        run: flutter pub get
+
+      - name: Run tests
+        run: flutter test
+
+      - name: Build APK
+        run: flutter build apk --release
+
+      - name: Upload APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-release
+          path: build/app/outputs/flutter-apk/app-release.apk
