--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,3 +19,9 @@ jobs:
 
       - run: flutter pub get
       - run: flutter analyze
+      - run: flutter build apk --debug
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: app-debug
+          path: build/app/outputs/flutter-apk/app-debug.apk
