--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,16 +7,16 @@ on:
     branches: [ "main" ]
 
 jobs:
-- name: Create config.json
-  run: |
-    echo '{"SB_URL": "${{ secrets.SB_URL }}", "SB_KEY": "${{ secrets.SB_KEY }}"}' > assets/config.json
-  shell: bash
-
   build:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
+
+      - name: Create config.json
+        run: |
+          mkdir -p assets
+          echo '{"SB_URL": "${{ secrets.SB_URL }}", "SB_KEY": "${{ secrets.SB_KEY }}"}' > assets/config.json
 
       - uses: subosito/flutter-action@v2
         with:
